# pyldev

./: .gitignore  README.md  pyproject.toml  requirements.txt
pyldev/: __init__.py
pyldev/docker/: .env.example
pyldev/file/: __init__.py
pyldev/file/src/: File.py
pyldev/file/src/converter/: FileConverter.py  FileConverterDoc.py  FileConverterHTML.py  FileConverterPDF.py
pyldev/file/src/element/: __init__.py
pyldev/file/src/extractor/: FileExtractor.py  FileExtractorDocument.py  FileExtractorDocument2.py  FileExtractorMedia.py  FileExtractorSlideshow.py  FileExtractorSpreadsheet.py
pyldev/file/src/generator/: FileGenerator.py  FileGeneratorDocument.py  FileGeneratorMedia.py  FileGeneratorSlideshow.py  (+1 more)
pyldev/file/test/: .gitignore  converter.py  element.py  extractor.py
pyldev/gitclient/: __init__.py
pyldev/gitclient/src/: GitClient.py  GitClientGithub.py  GitClientGitlab.py
pyldev/gitclient/test/: main.py
pyldev/htmltools/: README.md  __init__.py
pyldev/htmltools/src/: tool.py
pyldev/htmltools/test/: main.py
pyldev/iac/: README.md  cdk-deploy.bat
pyldev/iac/cdk/: app.py  cdk-synth.bat
pyldev/iac/terraform/: cognito.tf  database.tf  frontend.tf  iam.tf  lambda.tf  main.tf  network.tf  prod.tfvars  variables.tf
pyldev/logger/: README.md  __init__.py
pyldev/logger/src/: Logger.py  LoggerPrintIntercept.py
pyldev/logger/test/: main.py
pyldev/setup/: .dockerignore  .env.example  .gitignore  README.md  docker-compose-server.yml  init_project.bat  init_project.sh  python-base.dockerfile  server.dockerfile
pyldev/setup/app/: README.md
pyldev/setup/config/: README.md
pyldev/setup/lib/: README.md
pyldev/setup/logs/: README.md
pyldev/setup/tmp/: README.md
pyldev/streamlit/src/: Front.py
pyldev/wiki/: .gitignore  README.md  convert_gitlab.bat  count_lines.py  mkdocs.yml  raw_to_docs.py  raw_to_gitlab.py  serve_mkdocs.bat  serve_mkdocs_locally.bat  serve_mkdocs_locally.sh  serve_mkdocs_vpn.bat  serve_mkdocs_vpn.sh  wiki_to_docs.py  wiki_to_lab.py
pyldev/wiki/docs/: _sidebar.md  home.md  index.md
pyldev/wiki/raw/: _sidebar.md  home.md
pyldev/wiki/wiki/: home.md
(+21 files in other folders)
