[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyyel-mlops"
version = "0.1.3"
description = "Development tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Nayel BLIDI", email="nayel.blidi@gmail.com" }
]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "tqdm",
    "streamlit",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
