[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyyel-mlops"
version = "0.2.0"
description = "Development tools"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name="Maxime BLIDI", email="blidi.maxime@gmail.com" }
]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "tqdm",
    "streamlit",
    "unstructured[csv,doc,docx,epub,image,md,odt,org,pdf,ppt,pptx,rtf,rst,tsv,xlsx]",
    "pytesseract",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
