[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyldev"
version = "0.2.0"
description = "Development tools"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name="Maxime BLIDI", email="blidi.maxime@gmail.com" }
]
dependencies = [
    "tqdm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
all = ["pyldev[wiki,streamlit,file]"]
wiki = ["mkdocs", "mkdocs-material"]
streamlit = ["streamlit"]
file = [
    "unstructured[csv,doc,docx,epub,md,odt,org,ppt,pptx,rtf,rst,tsv,xlsx]", 
    "pdfminer.six",
    "pypdf",
    "pdf2image",
    "pillow",
    "pytesseract",
]

[tool.setuptools.packages.find]
where = ["."]